--- a/src/pages/index/index.css
+++ b/src/pages/index/index.css
@@ -117,6 +117,7 @@
 }
 .add-goods-model .add-goods-label {
   margin-bottom: 12px;
+  color: #262626;
 }
 .add-goods-model .add-goods-input {
   width: 100%;
