--- a/src/pages/components/header/Header.css
+++ b/src/pages/components/header/Header.css
@@ -1,27 +1,10 @@
 .header-warp {
   width: 100%;
-  height: 60px;
+  height: 90px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #4247f6;
-  padding: 0 36px;
+  background-color: rgb(4,14,64);
   box-sizing: border-box;
   color: #ffffff;
-}
-.header-warp .header-title {
-  font-size: 16px;
-  font-weight: bold;
-}
-.header-warp .login-out-btn{
-  font-size: 14px;
-  cursor: pointer;
-  padding: 5px 10px;
-  margin-right: -10px;
-}
-.header-warp .login-out-btn:hover{
-  background-color: #ffffff;
-  color: #4247f6;
-  padding: 5px 10px;
-  border-radius: 8px;
 }
